--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,9 @@ android {
 def firebaseBomVersion = "30.5.0"
 def googleServicesVersion = "4.3.15"
 def navVersion = "2.5.3"
-def glideVersion = '4.9.0'
-def uCropVersion='2.2.6'
-def circleImageVersion='3.1.0'
 def lifeCycleExtensionVersion = '1.1.1'
+def retrofitVersion = '2.3.0'
+def rxJavaVersion = '2.1.1'
 
 dependencies {
 
@@ -65,14 +64,12 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
-    // Image implementations
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation "com.github.yalantis:ucrop:$uCropVersion"
-    implementation "de.hdodenhof:circleimageview:$circleImageVersion"
-
     // Android Jetpack library implementations
     implementation "android.arch.lifecycle:extensions:$lifeCycleExtensionVersion"  // ViewModelProviders
 
+    //Retrofit implementations
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
